# biometric_cryptography

./: CMakeLists.txt  README.md
src/: main.cpp
src/biometrics/: feature_extraction.cpp  feature_extraction.hpp
src/data_IO/: image_IO.cpp  image_IO.hpp
src/image_processing/preprocessing/: contrast_enhancement.cpp  contrast_enhancement.hpp
